Fixed width on mobile phones

--- a/public/index.scss
+++ b/public/index.scss
@@ -14,7 +14,7 @@
   @media screen and (orientation: portrait) and (max-width: 438px),
   screen and (orientation: landscape) and (max-height: 438px) {
     padding-left: calc((100% - 343px) / 2);
-    width: 95%;
+    width: 90%;
   }
 }
 
